  * Rewrite the apport hook to be more useful
    - update debian/apport/firefox.py.in
  * Ship a file in /etc/apport/native-origins.d to enable bug reporting
    on PPA branches
    - add debian/apport/native-origins.in
    - rename debian/apport/firefox.in => debian/apport/blacklist.in
    - update debian/rules
    - update debian/firefox.install.in
    - update debian/firefox.dirs.in

 -- Chris Coulson <chris.coulson@canonical.com>  Sat, 20 Aug 2011 20:25:32 +0100

firefox-trunk (8.0~a1~hg20110815r75289+nobinonly+nobinonly-0ubuntu1) oneiric; urgency=low

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * New upstream snapshot v8.0 A1 HG 20110815R75289

  * Update globalmenu-extension to 2.0 prerelease r222
    - Update for imgILoader changes in Firefox 8
    - Update to use only the standard addEventListener, required by Firefox 8
    - Fix LP: #810489 - Inconsistent behaviour if extension is enabled
      after turning off the menubar, which will affect Lucid -> P upgrades
      once Lucid has a newer Firefox. document.loadOverlay() triggers a reload
      of localstore.rdf, which overwrites our changes to the UI to hide
      the Firefox button and bookmark button. Restore them when this happens
    - Fix LP: #800733 - Quick Filter Bar checkbox in Thunderbird menu is
      not marked as checked. On menuitems with command nodes, ensure we update
      the state on the correct node
    - Ensure we disconnect all signal handlers when a menu is destroyed.
      Should fix a SIGSEGV in uGlobalMenu::OnClose()
    - Drop Firefox 4 and 5 compatibility
    - Drop the uIGlobalMenuLoader interface, as it never served any purpose
    - Rework how we synchronize attributes to menuitems from their
      corresponding command nodes
    - Don't synchronize attributes from command nodes associated with menus
    - Rework how we handle document insertion/removals. Rather than keeping
      our dbusmenu structure in sync at all times, and routing the events