@@ -89,7 +89,7 @@
 --- a/browser/branding/aurora/pref/firefox-branding.js
 +++ b/browser/branding/aurora/pref/firefox-branding.js
 @@ -12,11 +12,11 @@ pref("app.update.download.backgroundInte
- pref("app.update.url.manual", "http://nightly.mozilla.org/");
+ pref("app.update.url.manual", "http://www.mozilla.com/firefox/channel/");
  // A default value for the "More information about this update" link
  // supplied in the "An update is available" page of the update wizard. 
 -pref("app.update.url.details", "http://www.mozilla.org/projects/%APP%/");
